BusOne/src/objects/EM_Event_Configuration_Country_vod__c.object
<CustomObject>
    <description>Linking table between Event Configuration and Country</description>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The country the event configuration is for.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Event Configuration Countries</relationshipLabel>
        <relationshipName>EM_Event_Configuration_Country_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Configuration_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The event configuration used by the selected country. An event configuration defines an event type and a time period the configuration is valid for.</description>
        <label>Event Configuration</label>
        <referenceTo>EM_Event_Configuration_vod__c</referenceTo>
        <relationshipLabel>Event Configuration Countries</relationshipLabel>
        <relationshipName>Event_Configuration_Country_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>ID of the event configuration country record.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Event Configuration Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Configuration Countries</pluralLabel>
    <recordTypes>
        <fullName>Event_Configuration_Country_vod</fullName>
        <active>true</active>
        <description>Event Configuration Country</description>
        <label>Event_Configuration_Country_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>